# raftor

./: Cargo.toml  Config.toml  README.md
src/: channel.rs  config.rs  data.rs  hash_ring.rs  lib.rs  main.rs  server.rs  session.rs  utils.rs
src/http/: mod.rs
src/network/: codec.rs  listener.rs  mod.rs  network.rs  node.rs  recipient.rs  remote.rs  request.rs  session.rs
src/raft/: client.rs  data.rs  error.rs  mod.rs  network.rs  storage.rs
src/raftor/: handlers.rs  mod.rs  raft.rs
static/: index.html
