[package]
name = "raftor"
version = "0.1.0"
authors = ["Oron Sharabi <oron@bigpanda.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-web = "1.0.8"
actix-web-actors = "1.0.2"
actix-cors = "0.1.0"
actix-files = "0.1.6"
actix-raft = "0.4.2"
tokio = "0.1"
futures = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp = "0.8"
rmp-serde = "0.14"
log = "0.4"
byteorder = "1.3"
bytes = "0.4"
rust-crypto = "0.2.36"
fasthash = "0.4"
tempfile = "3"
hash_ring = { git = "https://github.com/oronsh/rust-hash-ring.git" }
config = "0.9"
rocksdb = "0.13"
